<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">德卿铺</string>
    <!-- 空格：&#160; 窄空格：&#8210; &#160;&#160;&#8210  一个汉字宽度的空格  身&#160;&#160;份&#160;&#160;证=4个汉字-->
    <!-- %1$s，%1$d可以在一个字符串里定义多个统配字符-->
    <!-- \u3000\u3000 首行缩进-->
    <!-- 首页 -->
    <string name="item_sj">商家联盟</string>
    <string name="item_zb">掌柜直播</string>
    <string name="item_txl">通讯录</string>
    <string name="item_gr">个人中心</string>
    <string name="item_sh">生活馆</string>

    <!-- 地址 -->
    <string name="tv_consignee">收货人：</string>
    <string name="tv_consignees">收货人</string>
    <string name="tv_select">请选择</string>
    <string name="tv_Cancel">取消</string>
    <string name="tv_tell">联系电话</string>
    <string name="tv_area">所在区域</string>
    <string name="tv_delAddress">删除地址</string>
    <string name="network_err">Simulation network error</string>
    <string name="tv_default_address">默认地址</string>
    <string name="tv_edit">编辑</string>
    <string name="tv_del">删除</string>
    <string name="tv_save">保存</string>
    <string name="title_address">我的地址</string>
    <string name="title_edit_address">编辑地址</string>
    <string name="title_auth">认证中心</string>
    <string name="btn_address">新增地址</string>
    <string name="btn_submit">提交</string>
    <string name="tip_address">*注：最多保存5个地址</string>
    <string name="tip_detail">填写详细地址</string>
    <string name="tip_update_photo">点击上传图片</string>
    <string name="tip_look_ex">查看示例</string>
    <string name="tip_store_type">商店类型</string>
    <string name="tip_real_name">真实姓名</string>
    <string name="tip_card">证件号</string>
    <string name="tip_card_hand">手持证件号</string>
    <string name="tip_auth_reminder">照片，要求面部清晰无遮挡，同时证件照片及号码清晰可辨认</string>
    <string name="tip_store_name">商店名</string>
    <string name="tip_store_address">商店地址</string>
    <string name="tip_store_buslicense">商店的营业执照</string>
    <string name="tip_company_name">公司名</string>
    <string name="tip_company_address">公司地址</string>
    <string name="tip_company_merge">公司营业执照/三证合一</string>
    <string name="tip_star_id">邀请人的客观号</string>

    <!-- 联盟商家-->
    <string name="title_merchant_food">享美食</string>
    <string name="title_merchant_hotel">住酒店</string>
    <string name="title_merchant_play">爱玩乐</string>
    <string name="title_merchant_travel">爱旅游</string>
    <string name="title_merchant_all">&#160;全部&#160;</string>
    <string name="tv_customer">联系客服</string>
    <string name="tv_call">一键拨打电话</string>
    <string name="btn_check">买单</string>
    <string name="txt_comment_all">查看全部评论</string>
    <!-- 产品-->
    <string name="txt_goods_default">默认</string>
    <string name="txt_goods_sales_volume">销量</string>
    <string name="txt_goods_sales_numb">数量：</string>
    <string name="txt_goods_price">价格</string>
    <string name="txt_goods_price_tip">客官价：￥</string>
    <string name="txt_goods_activity">活动</string>
    <string name="txt_goods_offline">线下消费</string>
    <string name="txt_goods_spec_model">规格型号</string>
    <string name="txt_goods_graphic_details">图文详情</string>
    <string name="txt_goods_spec_params">参数规格</string>
    <string name="txt_goods_recom_pro">推荐产品</string>
    <string name="txt_goods_closing_record">成交纪录</string>
    <string name="txt_goods_customer">顾客</string>
    <string name="txt_goods_transaction_time">交易时间</string>
    <string name="txt_goods_transaction_num">交易数量</string>
    <string name="txt_goods_detail">商品详情</string>
    <string name="title_goods">列表详情</string>
    <string name="btn_buy">立刻购买</string>
    <string name="btn_add">加入购物车</string>
    <string name="btn_confirm">确定</string>

    <!-- 我的荷包-->
    <string name="title_mypouch">我的荷包</string>
    <string name="title_pay_confirm">确认支付</string>
    <string name="title_order_confirm">确认订单</string>
    <string name="title_trans_detail">交易明细</string>
    <string name="txt_myblance">我的余额（银两）</string>
    <string name="txt_withdrawals">提现申请</string>
    <string name="txt_rechange">充值银两</string>
    <string name="txt_bind_alipay">绑定支付宝</string>
    <string name="txt_bind_wechat">绑定微信号</string>
    <string name="txt_trans_record">交易记录</string>
    <string name="txt_alipay">支付宝</string>
    <string name="txt_wechat">微信</string>
    <string name="txt_estimate_time">预计到账时间：当日或次日（工作日）到账</string>
    <string name="txt_rechange_money">充值金额(元)：</string>
    <string name="hint_money">请输入金额</string>
    <string name="hint_alipay_acount">请输入支付宝账号</string>
    <string name="hint_alipay_pass">请输入支付宝密码</string>
    <string name="hint_wechat_acount">请输入微信号</string>
    <string name="txt_unbind">未绑定，前往绑定</string>
    <string name="txt_payment_detail">付款明细</string>
    <string name="txt_balance_pay">余额支付</string>
    <string name="txt_order_id">订单编号</string>
    <string name="txt_record_all">全部</string>
    <string name="txt_record_rechange">充值</string>
    <string name="txt_record_withdraw">提现</string>
    <!--购物车-->
    <string name="hint_cart_sellers_msg">选填：对于本次交易的说明</string>
    <string name="hint_cart_merchant_name_manager">我是掌柜</string>
    <string name="hint_cart_merchant_name_platform">平台自营</string>
    <!--我的订单-->
    <string name="title_order">我的订单</string>
    <string name="title_order_detail">订单详情</string>
    <string name="tv_logistics">查看物流</string>
    <string name="tv_refund">申请退款</string>
    <string name="tv_refund_return">退货退款</string>
    <string name="tv_refund_only">仅退款</string>
    <string name="tv_apply_service">申请服务</string>
    <string name="tv_apply_refund">申请退款</string>
    <string name="tv_refund_amount">退款金额</string>
    <string name="tv_refund_reason">退货原因</string>
    <string name="tv_receipt">确认收货</string>
    <string name="tv_order_delect">删除订单</string>
    <string name="tv_evaluation">立即评价</string>
    <string name="tv_payment">立即付款</string>
    <string name="tv_order_cancel">取消订单</string>
    <string name="tv_order_shipped">卖家已发货</string>
    <string name="tv_order_id_tip">订单编号：</string>
    <string name="tv_order_id_tip_edt">订单编号：%1$s</string>
    <string name="tv_order_addtime_tip">创建时间：</string>
    <string name="tv_order_addtime_tip_edt">创建时间：%1$s</string>
    <string name="tv_order_paytime_tip">付款时间：</string>
    <string name="tv_order_paytime_tip_edt">付款时间：%1$s</string>
    <string name="tv_order_deliver_tip">发货时间：</string>
    <string name="tv_order_deliver_tip_edt">发货时间：%1$s</string>
    <string name="tv_order_deliver_status_edt">物流状态：%1$s</string>
    <string name="tv_order_pay">待支付：%1$s元</string>
    <string name="tv_order_payed">已支付：%1$s元</string>
    <string name="tv_refund_amount_tip">最多%1$s元，含发货油费%2$s元</string>
    <string name="hint_refund_input">最多200字</string>
    <string name="tv_manager_state_registed">没有进行掌柜注册</string>
    <string name="tv_manager_state_unregist">已经进行掌柜注册</string>

    <!--个人主页-->
    <string name="tv_person_follow">%1$s\n关注</string>
    <string name="tv_person_fans">%1$s\n粉丝</string>
    <string name="tv_person_camp">%1$s\n阵营</string>
    <string name="tv_person_signature">个性签名</string>
    <string name="tv_person_birth">生日</string>
    <string name="tv_person_constellation">星座</string>
    <string name="tv_person_ID">身份标识</string>
    <string name="tv_person_reputation">信誉标识</string>
    <string name="tv_person_album">我的相册</string>
    <string name="tv_person_live_state">开播状态</string>
    <string name="tv_person_living">直播中</string>
    <string name="tv_person_diary">我的日志</string>
    <string name="tv_person_stores">我的店铺</string>
    <string name="tv_person_goods">我的自营商品</string>
    <string name="tv_person_wish">我的心愿单</string>
    <string name="tv_person_gift">拆礼物</string>
    <string name="tv_person_head">头像</string>
    <string name="tv_person_limit">限20字</string>
    <string name="tv_person_sex">性别</string>
    <string name="tv_person_username">昵称</string>
    <string name="hint_person_sex">1970&#8211;07&#8211;20</string>
    <string name="tv_person_finish">完成</string>
    <string name="tv_person_album_update">上传照片</string>
    <string name="tv_person_album_del">删除照片</string>
    <string name="tv_person_store_allgoods">全部商品</string>
    <string name="tv_person_store_hotgoods">热门商品</string>
    <string name="tv_person_coupon_money">满%1$d使用</string>
    <string name="tv_person_coupon">无使用门槛</string>
    <!--杂七杂八-->
    <string name="tv_free_shipping_amount">满%1$s包邮</string>
    <string name="tv_amout_profit">利润：%1$s</string>
    <string name="tv_amount_save">省%1$s元</string>
    <string name="tv_regitst_manager">注册掌柜</string>
    <string name="tv_agent_immediate">立即代理</string>

    <!-- 服务器返回-->
    <string name="net_param_error">参数错误</string>
    <string name="net_service_error">服务器繁忙</string>
    <string name="net_user_error">访问出错</string>
    <!--takePhoto 相关-->
    <string name="album_view">选择图片</string>
    <string name="image_view">单击选择</string>
    <string name="add">确定</string>
    <string name="selected">已选</string>
    <string name="limit_exceeded">最多能选 %d 张</string>
    <!-- ////// -->
    <string name="nick_name">Kevin</string>
    <string name="blog_site">Blog:http://blog.csdn.net/student9128</string>
    <string name="drawer_layout_open">Open</string>
    <string name="drawer_layout_close">Close</string>
    <string name="tips">Hello</string>
    <string name="navigation_navigation_bar">NavigationBar</string>
    <string name="navigation_radio_bar">RadioGroup</string>
    <string name="navigation_tab_layout">TabLayout + ViewPager</string>
    <string name="navigation_tab_layout2">TabLayout + ViewPager 2</string>
    <string name="navigation_text_tab">TextView + LinearLayout</string>
    <string name="navigation_tab_host">TabHost</string>

    <string name="item_home">Home</string>
    <string name="item_location">Location</string>
    <string name="item_like">Like</string>
    <string name="item_person">Me</string>

    <string name="fanhui"><u>返回登录</u></string>
    <string name="zhuce"><u>立即注册</u></string>
    <string name="mima">1234567890qwertyuiopasdfghjklmnbvcxzQWERTYUIOPASDFGHJKLMNBVCXZ</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>

    <string name="crop__done">DONE</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">CANCEL</string>

    <string name="dingdan">未 使 用</string>
    <!--常用格式:
    String.format(getResources().getString(R.string.delay_time),mDay,mMinute,mSecond))
    string name="delay_time">距离过年还有%1$d天%2$d时%3$d秒
    %n$s-n表示目前是第几个参数 （比如%1$s中的1代表第一个参数）,s代表字符串
    %n$d-n表示目前是第几个参数 （比如%1$d中的1代表第一个参数）,d代表整数
    %n$f-n表示目前是第几个参数 （比如%1$f中的1代表第一个参数）,f代表浮点数-->
</resources>
