<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">
    <com.bayue.live.deqingpu.view.TopActionBar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canClose="false"
        />
    <LinearLayout
        android:id="@+id/linGoodsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView android:id="@+id/txtMerchantFood"
            android:text="@string/title_merchant_food"
            android:layout_weight="1"
            style="@style/titleCommonSizeStyle.Base"/>
        <TextView android:id="@+id/txtMerchantHotel"
            android:text="@string/title_merchant_hotel"
            android:layout_weight="1"
            style="@style/titleCommonSizeStyle.Base" />
        <TextView android:id="@+id/txtMerchantPlay"
            android:text="@string/title_merchant_play"
            android:layout_weight="1"
            style="@style/titleCommonSizeStyle.Base" />
        <TextView android:id="@+id/txtMerchantTravel"
            android:text="@string/title_merchant_travel"
            android:layout_weight="1"
            style="@style/titleCommonSizeStyle.Base" />
        <TextView android:id="@+id/txtMerchantAll"
            android:text="@string/title_merchant_all"
            android:layout_weight="1"
            android:visibility="visible"
            style="@style/titleCommonSizeStyle.Base" />
    </LinearLayout>
    <View android:id="@+id/viewLine"
        android:layout_width="@dimen/img_max_height"
        android:layout_height="2px"
        android:background="@color/titlecolor"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/vpMerchant"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>