<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/txtSpecCustomer"
        android:text="@string/txt_goods_customer"
        style="@style/normalSizeBlackStyle"
        android:padding="@dimen/dp_10"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txtSpecTransaTime"
        android:text="@string/txt_goods_transaction_time"
        style="@style/normalSizeBlackStyle"
        android:padding="@dimen/dp_10"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txtSpecTransaGoodsNum"
        android:text="@string/txt_goods_transaction_num"
        style="@style/normalSizeBlackStyle"
        android:padding="@dimen/dp_10"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
</LinearLayout>