<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:background="@color/color_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.bayue.live.deqingpu.view.TopActionBar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canClose="true"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linSelectHeadPic"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivPersonEditHead"
                android:src="@mipmap/ic_launcher_round"
                android:layout_margin="@dimen/dp_4"
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45" />
            <TextView
                android:text="@string/tv_person_head"
                style="@style/personBlackFont"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/dp_4"/>
            <ImageView
                android:src="@mipmap/icon_jump"
                android:padding="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_person_signature"
                style="@style/personBlackFont"/>
            <EditText
                android:id="@+id/etPersonSignature"
                android:layout_weight="1"
                style="@style/personBlackFont"
                android:hint="@string/tv_person_limit"
                android:maxLength="20"
                android:background="@null"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="@color/white"
            android:showDividers="middle|end"
            android:divider="@drawable/divider_line"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/tv_person_sex"
                    style="@style/personBlackFont"/>
                <EditText
                    android:id="@+id/etPersonSex"
                    android:hint="@string/app_name"
                    android:layout_weight="1"
                    style="@style/personBlackFont"
                    android:background="@null"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/tv_person_username"
                    style="@style/personBlackFont"/>
                <EditText
                    android:id="@+id/etPersonName"
                    android:hint="@string/app_name"
                    android:layout_weight="1"
                    style="@style/personBlackFont"
                    android:background="@null"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/tv_person_birth"
                    style="@style/personBlackFont"/>
                <EditText
                    android:id="@+id/etPersonBirth"
                    android:hint="@string/hint_person_sex"
                    android:layout_weight="1"
                    style="@style/personBlackFont"
                    android:background="@null"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/tv_person_constellation"
                    style="@style/personBlackFont"/>
                <EditText
                    android:id="@+id/etPersonConstellation"
                    android:hint="@string/app_name"
                    android:layout_weight="1"
                    style="@style/personBlackFont"
                    android:background="@null"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>