<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:showDividers="middle"
    android:divider="@drawable/divider_line" android:layout_marginTop="@dimen/dp_10"
    android:layout_marginBottom="@dimen/dp_10"
    >
    <LinearLayout
        android:id="@+id/linPersonDiary"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tv_person_diary"
            android:layout_weight="1"
            style="@style/personGreyFont"/>
        <ImageView
            android:src="@mipmap/icon_jump"
            android:padding="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linPersonStore"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tv_person_stores"
            style="@style/personGreyFont"/>
        <TextView
            android:id="@+id/tvPersonStore"
            android:text="@string/app_name"
            android:layout_weight="1"
            style="@style/personGreyFont"
            android:gravity="right"/>
        <ImageView
            android:src="@mipmap/icon_jump"
            android:padding="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linPersonGoods"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tv_person_goods"
            android:layout_weight="1"
            style="@style/personGreyFont"/>
        <ImageView
            android:src="@mipmap/icon_jump"
            android:padding="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linPersonWish"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tv_person_wish"
            android:layout_weight="1"
            style="@style/personGreyFont"/>
        <ImageView
            android:src="@mipmap/icon_jump"
            android:padding="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linPersonGift"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tv_person_gift"
            android:layout_weight="1"
            style="@style/personBlackFont"
            android:drawableLeft="@mipmap/icon_person_gift"
            android:drawablePadding="@dimen/dp_15"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_15"
            />
        <ImageView
            android:src="@mipmap/icon_jump"
            android:padding="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>