<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100dp"
    android:layout_height="130dp"
    android:layout_gravity="right"
    android:layout_marginRight="@dimen/dp_10"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_share"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="@mipmap/icon_menu_bg"
        android:divider="@drawable/divider_line"
        android:showDividers="middle"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <TextView
            android:id="@+id/txtPopRechange"
            android:text="@string/txt_record_rechange"
            style="@style/normalSizeBlackStyle"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtPopWithdraw"
            android:text="@string/txt_record_withdraw"
            style="@style/normalSizeBlackStyle"
            android:textColor="@color/grey"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txtPopAll"
            android:text="@string/txt_record_all"
            style="@style/normalSizeBlackStyle"
            android:textColor="@color/grey"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>