<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/color_black_90_transparent">
    <LinearLayout
        android:id="@+id/linSelectRefund"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical" >
        <RelativeLayout
            android:background="@color/grey_300"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvCancel"
                android:text="@string/tv_Cancel"
                style="@style/BaseFont"
                android:textColor="@color/black"
                android:padding="@dimen/dp_10"
                />
            <TextView
                android:id="@+id/tvConfirm"
                android:text="@string/btn_confirm"
                style="@style/BaseFont"
                android:textColor="@color/black"
                android:padding="@dimen/dp_10"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <LinearLayout
            android:showDividers="middle"
            android:divider="@color/color_line"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvRefundAmount"
                android:text="@string/tv_refund_return"
                style="@style/normalSizeBlackStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/dp_40"
                android:padding="@dimen/dp_10"
                android:layout_alignParentRight="true"
                />
            <TextView
                android:id="@+id/tvRefundOnly"
                android:text="@string/tv_refund_only"
                style="@style/normalSizeBlackStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:padding="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_40"
                android:layout_alignParentRight="true"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>