<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linGoodsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/linGoodsDefault"
            style="@style/titleCommonSizeStyle.Base"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtMerchantFood"
                android:text="@string/txt_goods_default"
                style="@style/titleCommonSizeStyle.Base"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linGoodsValume"
            style="@style/titleCommonSizeStyle.Base"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtMerchantHotel"
                android:text="@string/txt_goods_sales_volume"
                style="@style/titleCommonSizeStyle.Base"/>
            <ImageView
                android:id="@+id/imgGoodsSortTipValume"
                android:src="@mipmap/icon_asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linGoodsPrice"
            style="@style/titleCommonSizeStyle.Base"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtMerchantPlay"
                android:text="@string/txt_goods_price"
                style="@style/titleCommonSizeStyle.Base"/>
            <ImageView
                android:id="@+id/imgGoodsSortTipPrice"
                android:src="@mipmap/icon_asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linGoodsAct"
            style="@style/titleCommonSizeStyle.Base"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtMerchantTravel"
                android:text="@string/txt_goods_activity"
                style="@style/titleCommonSizeStyle.Base"/>
            <ImageView
                android:id="@+id/imgGoodsSortTipAct"
                android:src="@mipmap/icon_asc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <View android:id="@+id/viewLine"
        android:layout_width="@dimen/img_max_height"
        android:layout_height="2px"
        android:background="@color/titlecolor"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/vpMerchant"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>